# AI-2024-1_Sem

./: README.md
LLM Introduction/: pyproject.toml
LLM Introduction/hw_1/: __init__.py  hw_1.py
LLM Introduction/notebooks/: hw_2.ipynb  hw_3.ipynb
LLM Introduction/tests/: test_hw_1_example.py
ML System Design/: .pre-commit-config.yaml  README.md  pyproject.toml
ML System Design/docs/: ml_system_design_doc.md
